tests/semantic_errors/sasha999_3.tl
require "ifj21"

global name : function (integer, number, string, string, number, integer, integer, nil, nil, nil, number)
function name    (a : integer, b : number, c : string, d : nil) end

function main()
end

main()
